--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
   body{
-    background-color: rgb(119, 123, 129);
+    background-color: #333;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    font-family: Arial, Helvetica, sans-serif;
   }
