--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@
     margin-right: auto;
     font-family: Arial, Helvetica, sans-serif;
   }
+  .form-check-input:checked {
+    background-color: #21FA91; /* nowy kolor */
+    border-color: #21FA91;
+}
