--- a/style.css
+++ b/style.css
@@ -1,11 +1,57 @@
-  body{
-    background-color: #333;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  .form-check-input:checked {
-    background-color: #21FA91; /* nowy kolor */
-    border-color: #21FA91;
+:root{
+  --BGColor: #333;
+  --HeaderColor: #222;
+  --BoxColor: #FFF;
+  --FontColor: #000;
+  --ColorStyle: #21FA91;
+}
+:root[data-theme="light"] {
+    --BGColor: #FFF;
+    --HeaderColor: #EEE;
+    --BoxColor: #686868;
+    /* --FontColor: #FFF; */
+    --ColorStyle: #028545;
+
+}
+body {
+  background-color: var(--BGColor);
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: Arial, Helvetica, sans-serif;
+}
+header {
+    background-color: var(--HeaderColor);
+    width: 100%;
+    min-width: 545px;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    box-shadow: 0 0 5px #000;
+}
+h1 {
+    float: left;
+    color: var(--ColorStyle);
+}
+i {
+    width: 100px;
+}
+label{
+    color: var(--ColorStyle);
+    font-size: large;
+}
+p{
+  color: var(--FontColor);
+}
+#container {
+  margin: 40px;
+  padding: 20px;
+}
+#userUI{
+  display: inline-flex;
+  align-items: flex-end;
+}
+.form-check-input:checked {
+  background-color: var(--ColorStyle);
+  border-color: var(--ColorStyle);
 }
